syntax = "proto3";
package fileservice;

option go_package = "github.com/muktar-gif/Project-2-611/tree/direction-version/fileproto";

message FileSegmentRequest {
    string datafile = 1;
	int32 start = 2;   
	int32 length = 3;
    int32 cValue = 4;
}

message FileData {
    bytes dataChunk = 1;
}

service FileService {

    rpc GetFileChunk(FileSegmentRequest) returns (stream FileData);

}