syntax = "proto3";
package jobservice;

import "google/protobuf/empty.proto";

message Job {
    string datafile = 1;
	int32 start = 2;   
	int32 length = 3;
}

message JobResult {
    Job jobFound = 1;
    int32 numOfPrimes = 2;
}

service JobService {

    rpc requestJob(google.protobuf.Empty) returns (Job);
    rpc pushResult(JobResult) returns (google.protobuf.Empty);

}

